k8s/node-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: node-service
  namespace: metrics
spec:
  serviceName: node-service
  replicas: 2
  selector:
    matchLabels:
      app: node-service
  template:
    metadata:
      labels:
        app: node-service
    spec:
      serviceAccountName: metrics-sa  # Указываем сервисный аккаунт
      volumes:
        - name: config
          emptyDir: {}
      containers:
        - name: node
          image: vovapraded/node-service:0.0.1-arm64
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: config
              mountPath: /config
          command:
            - sh
            - -c
            - |
              echo "Sourcing env..." && \
              . /config/env && \
              echo "Starting app with SPRING_DATASOURCE_URL=$SPRING_DATASOURCE_URL" && \
              java -jar app.jar
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
