k8s/node-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-service
  namespace: metrics
spec:
  selector:
    app: node-service
  ports:
    - port: 8080
      targetPort: 8080
