k8s/istio-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: node-vs
  namespace: metrics
spec:
  hosts:
    - "*"
  gateways:
    - node-gateway
  http:
    - name: cors-route
      match:
        - uri:
            prefix: /swagger-ui
        - uri:
            prefix: /v3/api-docs
        - uri:
            prefix: /data
      corsPolicy:
        allowOrigin:
          - "http://localhost:8080" # укажи конкретный origin
        allowMethods:
          - GET
          - POST
          - PUT
          - DELETE
          - OPTIONS
        allowHeaders:
          - Content-Type
          - Authorization
        allowCredentials: true

      route:
        - destination:
            host: node-service.metrics.svc.cluster.local
            port:
              number: 8080
